# simpleapi

./: .gitignore  pyproject.toml
simpleapi/: __init__.py  main.py  request.py  response.py
tests/: test_main.py
